--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
 		<commons.io.version>2.5</commons.io.version>
 		<commons.fileupload.version>1.3.3</commons.fileupload.version>
 		<poi.version>3.17</poi.version>
+		<guava.version>18.0</guava.version>
 	</properties>
 
 	<dependencies>
@@ -87,11 +88,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-freemarker</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-devtools</artifactId>
-			<scope>runtime</scope>
-		</dependency>
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.springframework.boot</groupId> -->
+<!-- 			<artifactId>spring-boot-devtools</artifactId> -->
+<!-- 			<scope>runtime</scope> -->
+<!-- 		</dependency> -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-cache</artifactId>
@@ -186,6 +187,14 @@
 				<version>${thymeleaf.extras.shiro.version}</version>
 			</dependency>
 			
+			<!-- shiro-redis -->
+			<dependency>
+			  <groupId>org.crazycake</groupId>
+			    <artifactId>shiro-redis</artifactId>
+			    <version>3.1.0</version>
+			</dependency>
+
+			
 			<!--io常用工具类 -->
 			<dependency>
 				<groupId>commons-io</groupId>
@@ -228,7 +237,8 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
-			<optional>true</optional> <!-- 表示依赖不会传递 -->
+			<optional>true</optional> 
+<!-- 			表示依赖不会传递 -->   
 		</dependency>
 		
 		<!-- 日志 -->
@@ -284,6 +294,24 @@
             <artifactId>fastjson</artifactId>
             <version>1.1.26</version>
         </dependency>
+        <dependency>
+			<groupId>org.codehaus.jackson</groupId>
+			<artifactId>jackson-mapper-asl</artifactId>
+			<version>1.9.13</version>
+		</dependency>
+        
+        <dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>${guava.version}</version>
+		</dependency>
+		
+		<!-- xss过滤组件 -->
+		<dependency>
+		    <groupId>org.jsoup</groupId>
+		    <artifactId>jsoup</artifactId>
+		    <version>1.9.2</version>
+		</dependency>
         
 	</dependencies>
 
