--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,7 +16,8 @@ Question_Box:
 Store:
   root:
     path: C:/dataWEST05
-    localhost: 47.98.151.13
+    #发邮件的地址
+    localhost: localhost
 
 #端口号配置
 server:
@@ -61,6 +62,7 @@ spring:
     restart:
       # 热部署开关
       enabled: true
+      
   #QQ邮箱配置
   mail:
     #发送邮件服务器
@@ -68,7 +70,7 @@ spring:
     #发送邮件的邮箱地址
     username: 1171392006@qq.com
     #客户端授权码，不是邮箱密码，这个在qq邮箱设置里面自动生成的indqbaqvfoyafjjg
-    password: dwecmstwvpwobafc
+    password: dejrypberyfvgbgd
     #端口号465或587
     properties.mail.smtp.port: 465
     # 发送邮件的地址，和上面username一致
@@ -79,21 +81,41 @@ spring:
     properties.mail.smtp.starttls.required: true
     properties.mail.smtp.ssl.enable: true
     default-encoding: utf-8
+  
+  #缓存设置  
+  redis:
+    host: 127.0.0.1
+    port: 6379
+    password: 123456
+    # 连接超时时长（毫秒）
+    timeout: 0
+    jedis:
+      pool:
+        # 连接池中的最大空闲连接
+        max-idle: 8
+        # 连接池中的最小空闲连接
+        min-idle: 0
+        # 连接池最大连接数（使用负值表示没有限制）
+        max-active: 8
+        # 连接池最大阻塞等待时间（使用负值表示没有限制）
+        max-wait: -1
+    
     
 #静态文件配置
   resources:
     static-locations: classpath:/static,classpath:/META-INF/resources,classpath:/templates/,classpath:/XXXX/,file:/XXXX/
-#jdbc配置
+#jdbc配置  （47.98.151.13）
   datasource:
-    url: jdbc:mysql://47.98.151.13:3306/question_box?useUnicode=true&characterEncoding=UTF-8&useSSL=true&serverTimezone=Etc/GMT-8
-    username: test
-    password: 123789
+    url: jdbc:mysql://localhost:3306/question_box?useUnicode=true&characterEncoding=UTF-8&useSSL=true&serverTimezone=Etc/GMT-8
+    username: root
+    password: 123456
     driver-class-name: com.mysql.cj.jdbc.Driver
+    
 #mybatis配置
 mybatis:
-#映射文件路径
+  #映射文件路径
   mapper-locations: classpath:mapper/*.xml
-#模型所在的包名
+  #模型所在的包名
   type-aliases-package: org.boot.mine.models
   
 # Shiro
@@ -103,6 +125,8 @@ shiro:
     loginUrl: /login
     # 权限认证失败地址
     unauthorizedUrl: /unauth
+    #被踢出后重定向到的地址
+    kickoutUrl: /login
     # 首页地址
     indexUrl: /index
     # 验证码开关
@@ -117,7 +141,7 @@ shiro:
     # 设置HttpOnly属性
     httpOnly: true
     # 设置Cookie的过期时间，天为单位
-    maxAge: 30
+    maxAge: 15
   session:
     # Session超时时间，-1代表永不过期（默认30分钟）
     expireTime: 30
@@ -126,17 +150,24 @@ shiro:
     # 相隔多久检查一次session的有效性，默认就是10分钟
     validationInterval: 10
     # 同一个用户最大会话数，比如2的意思是同一个账号允许最多同时两个人登录（默认-1不限制）
-    maxSession: -1
+    maxSession: 1
     # 踢出之前登录的/之后登录的用户，默认踢出之前登录的用户
     kickoutAfter: false
-
-# 防止XSS攻击（暂无）
-xss: 
-  # 过滤开关
-  enabled: true
-  # 排除链接（多个用逗号分隔）例如：通知公告
-  excludes: /system/notice/*
-  # 匹配链接 哪些可以匹配xss攻击
-  urlPatterns: /system/*,/monitor/*,/tool/*
+    # 过期时间(秒)
+    timeout: 7200
   
 
+# 防止XSS攻击
+xss: 
+  filter:
+    # 过滤开关
+    enabled: true
+    # 排除链接（多个用逗号分隔）--> 静态资源 + /home/reply:表示数据库存放原回复，显示在前端时再过滤
+    excludes: /home/reply,/resetPassword,/favicon.ico,/hhh.png,/css/*,/others/*,/js/*,/webjars/*,/img/*,/ajax/*,
+  
+csrf:
+  filter:
+    #是否开启-防止csrf攻击
+    enabled: true 
+     # 排除链接（多个用逗号分隔）
+    excludes: /login,/register/*,/getMoudle,/home/isBlack,/home/content,/resetPassword,/user/resetPasswordForm
